--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,14 +6,14 @@
 
 
     <link rel="icon" type="image/png" th:href="@{/images/icons/login.jpg}"/>
-    <link rel="stylesheet" type="text/css"  th:href="@{/css/main.css}">
+    <link rel="stylesheet" type="text/css"  th:href="@{static/css/main.css}">
 
 </head>
 <body>
 <div class="limiter">
     <div class="container-login100">
         <div class="wrap-login100">
-            <form class="login100-form validate-form" action="/authorization" method="post">
+            <form class="login100-form validate-form" action="/index" method="post">
 					<span class="login100-form-title p-b-43">
 						Login
 					</span>
@@ -26,10 +26,10 @@
 
 
                 <div class="wrap-input100 validate-input">
-                    <input class="input100" placeholder="Password" type="password" name="pass">
+                    <input class="input100" placeholder="Password" type="password" name="password">
                     <span class="focus-input100"></span>
                 </div>
-
+                    <span th:if="${error != null}" th:text="${error}" style="color:red"></span>
                 <div class="container-login100-form-btn">
                     <button class="login100-form-btn">
                         Login
@@ -43,7 +43,7 @@
                 </div>
             </form>
 
-            <div class="login100-more" style="background-image: url('/images/bg-01.jpg');">
+            <div class="login100-more" style="background-image: url('static/images/bg-01.jpg');">
             </div>
         </div>
     </div>
