--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -7,11 +7,11 @@
 <div class="top_bar" th:fragment="menu">
 
     <div class="dropdown" >
-        <button class="dropbtn">Name's account</button>
+        <button class="dropbtn" th:text="${#request.userPrincipal.name}">Name's account</button>
         <div class="dropdown-content">
             <a th:href="@{/home}">Profile</a>
             <a href="#">Settings</a>
-            <a href="#">Sign out</a>
+            <a href="/index">Sign out</a>
         </div>
     </div>
     <input type="button" value="Search" onclick="location.href='search'">
