--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -11,7 +11,7 @@
         <div class="dropdown-content">
             <a th:href="@{/home}">Profile</a>
             <a href="#">Settings</a>
-            <a href="/index">Sign out</a>
+            <a href="/logout">Sign out</a>
         </div>
     </div>
     <input type="button" value="Search" onclick="location.href='search'">
