--- a/src/main/resources/templates/add-author.html
+++ b/src/main/resources/templates/add-author.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>add author</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/css/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/css/home.css}">
 </head>
 <body>
 <div th:replace="menu.html :: menu"></div>
 
 <div class="form-wrap">
-    <div class="profile"><img th:src="@{/images/Author.png}" width="160" height="230">
+    <div class="profile"><img th:src="@{/static/images/Author.png}" width="160" height="230">
         <h1>Автор</h1>
     </div>
     <form method="post" action="form.php">
