--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 
 
     <link rel="icon" type="image/png" th:href="@{/images/icons/login.jpg}"/>
-    <link rel="stylesheet" type="text/css"  th:href="@{static/css/main.css}">
+    <link rel="stylesheet" type="text/css"  th:href="@{/static/css/main.css}">
 
 </head>
 <body>
@@ -19,14 +19,14 @@
 					</span>
 
                 <div class="wrap-input100 validate-input">
-                    <input class="input100" placeholder="Email" type="email" name="email">
+                    <input class="input100" placeholder="Email" type="email" th:field="*{email}" name="email">
                     <span class="focus-input100"></span>
 
                 </div>
 
 
                 <div class="wrap-input100 validate-input">
-                    <input class="input100" placeholder="Password" type="password" name="password">
+                    <input class="input100" placeholder="Password" type="password" th:field="*{password}" name="password">
                     <span class="focus-input100"></span>
                 </div>
                     <span th:if="${error != null}" th:text="${error}" style="color:red"></span>
@@ -43,7 +43,7 @@
                 </div>
             </form>
 
-            <div class="login100-more" style="background-image: url('static/images/bg-01.jpg');">
+            <div class="login100-more" style="background-image: url('/static/images/bg-01.jpg');">
             </div>
         </div>
     </div>
