--- a/src/main/resources/templates/info-book.html
+++ b/src/main/resources/templates/info-book.html
@@ -2,7 +2,7 @@
 <html html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Info Book</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/css/home.css}">
 </head>
 <body>
 <div th:replace="menu.html :: menu"></div>
