--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" th:href="@{/images/icons/searchicon.jpg}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/css/home.css}">
 </head>
 <body>
 <style>
