added setting user and refactoring

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-    <link rel="icon" type="image/png" th:href="@{/images/icons/login.jpg}"/>
+    <link rel="icon" type="image/png" th:href="@{/static/images/icons/login.jpg}"/>
     <link rel="stylesheet" type="text/css"  th:href="@{/static/css/main.css}">
 
 </head>
@@ -19,14 +19,14 @@
 					</span>
 
                 <div class="wrap-input100 validate-input">
-                    <input class="input100" placeholder="Email" type="email" th:field="*{email}" name="email">
+                    <input class="input100" placeholder="Email" type="email"  name="email">
                     <span class="focus-input100"></span>
 
                 </div>
 
 
                 <div class="wrap-input100 validate-input">
-                    <input class="input100" placeholder="Password" type="password" th:field="*{password}" name="password">
+                    <input class="input100" placeholder="Password" type="password"  name="password">
                     <span class="focus-input100"></span>
                 </div>
                     <span th:if="${error != null}" th:text="${error}" style="color:red"></span>
