--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
     <title>Main</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" th:href="@{/images/icons/home.ico}"/>
+    <link rel="icon" type="image/png" th:href="@{/static/images/icons/home.ico}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/static/css/home.css}">
 </head>
 <body>
