--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" type="image/png" th:href="@{/images/icons/registration.png}"/>
+    <link rel="icon" type="image/png" th:href="@{/static/images/icons/registration.png}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/static/css/main.css}">
 </head>
 <body>
@@ -15,42 +15,41 @@
 					<span class="login100-form-title p-b-43">
 						Registration
 					</span>
-
+                <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color:red; margin-top: 10%"></span>
                 <div class="wrap-input100 validate-input">
-                    <input class="input100" type="text" th:field="*{name}" placeholder="Name" pattern=^[A-Z]{1}[a-z]+$ name="name">
+                    <input class="input100" type="text" th:field="*{name}" placeholder="Name"  name="name">
                     <span class="focus-input100"></span>
                 </div>
 
+                <span th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}" style="color:red; margin-top: 10%"></span>
                 <div class="wrap-input100 validate-input">
-                    <input class="input100" type="text" placeholder="Surname" th:field="*{surname}" pattern=^[A-Z]{1}[a-z]+$ name="surname">
+                    <input class="input100" type="text" placeholder="Surname" th:field="*{surname}"  name="surname">
                     <span class="focus-input100"></span>
 
                 </div>
-
+                <span th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}" style="color:red; margin-top: 10%"></span>
                 <div class="wrap-input100 validate-input">
                     <input class="input100" type="date" placeholder="Birthday" th:field="*{birthday}" name="birthday">
                     <span class="focus-input100"></span>
 
                 </div>
 
-
+                <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" style="color:red; margin-top: 10%"></span>
                 <div class="wrap-input100 validate-input">
-                    <input class="input100" placeholder="Email" type="email" th:field="*{email}" name="email">
+                    <input class="input100" placeholder="Email" type="text" th:field="*{email}" name="email">
                     <span class="focus-input100"></span>
-                    <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" style="color:red"></span>
                 </div>
 
-
+                <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color:red; margin-top: 10%"></span>
                 <div class="wrap-input100 validate-input">
                     <input class="input100" placeholder="Password" type="password" th:field="*{password}" name="password">
                     <span class="focus-input100"></span>
-                    <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color:red"></span>
                 </div>
 
+                <span th:if="${#fields.hasErrors('passwordConfirm')}" th:errors="*{passwordConfirm}" style="color:red; margin-top: 10%"></span>
                 <div class="wrap-input100 validate-input">
                     <input class="input100" placeholder="Password Confirm" type="password" th:field="*{passwordConfirm}" name="passwordConfirm">
                     <span class="focus-input100"></span>
-                    <span th:if="${#fields.hasErrors('passwordConfirm')}" th:errors="*{passwordConfirm}" style="color:red"></span>
                 </div>
 
                 <div class="container-login100-form-btn">
