--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -14,8 +14,8 @@
             <a href="/logout">Sign out</a>
         </div>
     </div>
-    <input type="button" value="Search" onclick="location.href='search'">
-    <input type="button" value="New Book " onclick="location.href='add-book'">
+    <input type="button" value="Search" onclick="location.href='/search'">
+    <input type="button" value="New Book " onclick="location.href='/add-book'">
     <hr>
 </div>
 
