added watching info about book

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,7 +23,7 @@
         <td>Fill Nite</td>
         <td>10.0</td>
         <td>10</td>
-        <td><a href="/book/1">Open</a></td>
+        <td><a href="/info-book/1">Open</a></td>
         <td><a href="/delete/1">Delete</a></td>
 
     <tr>
@@ -31,7 +31,7 @@
     <td>Fill</td>
     <td>4.0</td>
     <td>5.0</td>
-    <td><a href="/book/2">Open</a></td>
+    <td><a href="/info-book/2">Open</a></td>
     <td><a href="/delete/2">Delete</a></td>
 </tr>
 </table>
