--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -28,7 +28,7 @@
     }
 </style>
 <div th:replace="menu.html :: menu"></div>
-<h1>Введите фамилию автора</h1>
+<h1>Enter author surname</h1>
 
 <form>
     <input type="text" name="search" placeholder="Поиск..">
