--- a/src/main/resources/templates/info-author.html
+++ b/src/main/resources/templates/info-author.html
@@ -7,24 +7,31 @@
     <link rel="stylesheet" type="text/css" th:href="@{/static/css/home.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/static/css/forInfo.css}">
 </head>
-<body>
+<body >
 <div th:replace="menu.html :: menu"></div>
 <div class="form-style-10">
     <div class="section"><span>1</span>Information</div>
-    <div class="inner-wrap">
+    <div class="inner-wrap" >
         <label>Name:
-            <output>${param.name}</output>
+            <output th:text="${author.nameAuthor}"></output>
+        </label>
+        <label>Patronymic:
+            <output th:text="${author.patronymic}"></output>
         </label>
         <label>Surname:
-            <output>${param.surname}</output>
+            <output th:text="${author.surname}"></output>
         </label>
         <label>Birthday:
-            <output>${param.email}</output>
-        </label>
-        <label>Email:
-            <output>${param.gender}</output>
+            <output th:text="${author.birthday}"></output>
         </label>
     </div>
+    <div class="section"><span>2</span>Books</div>
+    <div class="inner-wrap" >
+        <label>book:
+            <a target="_blank" th:each="book : ${author.books}" th:text="${book.name}" th:href="@{'/info-book/'+${book.id}}" style="margin-left: 2%"></a>
+        </label>
+    </div>
+
 </div>
 </body>
 </html>
