--- a/src/main/resources/templates/info-book.html
+++ b/src/main/resources/templates/info-book.html
@@ -1,4 +1,3 @@
-
 <html html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Info Book</title>
@@ -6,7 +5,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/static/css/forInfo.css}">
 
 </head>
-<body th:object="${book}">
+<body>
 
 <div th:replace="menu.html :: menu"></div>
 <div class="form-style-10">
@@ -35,6 +34,28 @@
         </span>
     </div>
     <div class="section"><span>3</span>Comments</div>
+    <div class="inner-wrap">
+        <label th:each="comments : ${book.comments}">comment:
+
+            <div class="text" th:text="${comments.text}"></div>
+
+            <span style="font-size: 15px">
+               <output th:text="'author: '+ ${comments.user.email}"></output>
+           </span>
+        </label>
+    </div>
+</div>
+<div class="form-style-10">
+    <form action="/comment" th:object="${comment}" method="post">
+        <div class="inner-wrap">
+            <h3>Add opinion about book:</h3>
+            <textarea th:field="*{text}"></textarea>
+            <input type="hidden" th:name="book" th:value="${book.id}">
+            <div class="button-section">
+                <input type="submit" value="Add">
+            </div>
+        </div>
+    </form>
 </div>
 </body>
 </html>
