--- a/src/main/resources/templates/info-book.html
+++ b/src/main/resources/templates/info-book.html
@@ -3,7 +3,6 @@
     <title>Info Book</title>
     <link rel="stylesheet" type="text/css" th:href="@{/static/css/home.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/static/css/forInfo.css}">
-
 </head>
 <body>
 
@@ -12,10 +11,13 @@
     <div class="section"><span>1</span>Image</div>
     <div class="inner-wrap">
         <div><img th:src="@{'/static/images/book/'+${book.getImage()}}" width="250" height="320"></div>
+        <div>
+
+        </div>
     </div>
     <div class="section"><span>2</span>Information</div>
     <div class="inner-wrap">
-        <label>Name Book:
+        <label >Name Book:
             <output th:text="${book.name}"></output>
         </label>
         <label>Author Full Name:
@@ -44,6 +46,14 @@
            </span>
         </label>
     </div>
+    <span th:if="${check} == null">
+    <form th:action="@{/add-lib-book}" method="post">
+          <input type="submit" value="Add in library">
+          <input type="hidden" th:name="book_user" th:value="${book.id}">
+          <input type="hidden" th:name="user_book" th:value="${#authentication.principal.id}">
+    </form>
+    </span>
+
 </div>
 <div class="form-style-10">
     <form action="/comment" th:object="${comment}" method="post">
