--- a/src/main/resources/templates/user-settings.html
+++ b/src/main/resources/templates/user-settings.html
@@ -35,7 +35,7 @@
             <span th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}" style="color:red; margin-top: 10%"></span>
             <label>Birthday
                 <input type="date"  required th:field="*{birthday}"  th:value="${#authentication.principal.birthday}"/></label>
-            <input type="hidden" th:field="*{id}"  th:value="${#authentication.principal.id}"/></label>
+            <input type="hidden" th:name="user"  th:value="${user.id}"/></label>
 
         </div>
 
