--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -84,3 +84,16 @@ th, td {
 }
 
 tr:hover {background-color:#f5f5f5;}
+
+.c {
+    border: 1px solid #333; /* Рамка */
+    display: inline-block;
+    padding: 5px 15px; /* Поля */
+    text-decoration: none; /* Убираем подчёркивание */
+    color: #000; /* Цвет текста */
+}
+.c:hover {
+    box-shadow: 0 0 5px rgba(0,0,0,0.3); /* Тень */
+    background: linear-gradient(to bottom, #fcfff4, #e9e9ce); /* Градиент */
+    color: #000000;
+}
